added repository secret

--- a/backend.yaml
+++ b/backend.yaml
@@ -19,8 +19,6 @@ spec:
       - name: todo-backend
         image: swr.tr-west-1.myhuaweicloud.com/task_organization/backend:13091383342
         imagePullPolicy: Always
-        imagePullSecrets:
-        - name: swr-registry-secret
         ports:
         - containerPort: 3000
         env:
@@ -57,6 +55,9 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "200m"
+      imagePullSecrets: 
+        - name: teleskop-registry-secret
+        
 --- 
 apiVersion: v1
 kind: Service
