--- a/backend.yaml
+++ b/backend.yaml
@@ -62,7 +62,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: todo-backend-service
+  name: backend
   namespace: todo-app
 spec:
   type: ClusterIP
